# PaddleRobotics

./: .gitignore
QuadrupedalRobots/ETGRL/: BCtrain.py  CMakeLists.txt  eval_real_robot.py  heightfield_terrain.py  ma_env_wrappers.py  package.xml  pretrain.py  terrain.py  train.py
QuadrupedalRobots/ETGRL/alg/: sac.py
QuadrupedalRobots/ETGRL/aliengo/: aliengo.urdf
QuadrupedalRobots/ETGRL/launch/: description.launch  urdf_viewer.rviz
QuadrupedalRobots/ETGRL/rlschool/: __init__.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/: ma_env_wrappers.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/envs/: aliengo_robot_env.py  env_builder.py  locomotion_gym_env.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/envs/env_wrappers/: MonitorEnv.py  trajectory_generator_wrapper_env.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/envs/gym_envs/: a1_gym_env.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/envs/sensors/: robot_sensors.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/envs/utilities/: ETG_model.py  heightfield.py  terrain.py
QuadrupedalRobots/ETGRL/rlschool/quadrupedal/robots/: a1.py  aliengo.py  kinematics.py  minitaur.py
