<package format="2">
  <name>etg_rl</name>
  <version>1.0.0</version>
  <description>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <architecture_independent />
  </export>
</package>